# Stair-Climbing-Robotic-Dog-for-Oxygen-Therapy-Patients

./: .gitignore  AGENTS.md  readme.md  sync.sh
docker/: Dockerfile  Dockerfile_ros2_sidecar  Dockerfile_ros2_sidecar_lidar  Dockerfile_rviz  Dockerfile_x86_sim  docker_build.sh  docker_build_ros2_sidecar.sh  docker_build_ros2_sidecar_lidar.sh  docker_build_rviz.sh  docker_build_x86_sim.sh  docker_run.sh  docker_run_ros2_sidecar.sh  docker_run_ros2_sidecar_lidar.sh  docker_run_rviz.sh  start_follow_system.sh
isaac/: build_reid_engine.py  go2_usd_setup.py  isaac_env.py
ros2_ws/src/go2_nav_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/go2_nav_bridge/go2_nav_bridge/: bridge_node.py  debug_trace_logger.py
ros2_ws/src/go2_nav_bridge/resource/: go2_nav_bridge
ros2_ws/src/person_follow_nav/: AGENTS.md  package.xml  setup.cfg  setup.py
ros2_ws/src/person_follow_nav/config/: nav2_controller.yaml
ros2_ws/src/person_follow_nav/launch/: follow_sidecar.launch.py  follow_sidecar_lidar.launch.py
ros2_ws/src/person_follow_nav/person_follow_nav/: camera_client.py  debug_trace_logger.py  ecs_logging_utils.py  follow_controller_node.py
ros2_ws/src/person_follow_nav/resource/: person_follow_nav
src/: args_parser.py  camera_capture.py  debug_trace_logger.py  depth_processor.py  dual_camera_centerline_viewer.py  dual_camera_system.py  main.py  nfc_gpu.py  person_follower.py  pid_controller.py  pixel_to_3d_api.py  reid_augment.py  reid_manager.py  reid_trt_inference.py  robot_controller.py  sim_camera_capture.py  sim_robot_controller.py  single_person_tracker.py  (+6 more)
(+8 files in other folders)
