<?xml version="1.0"?>
<package format="3">
  <name>go2_nav_bridge</name>
  <version>0.1.0</version>
  <description>ROS 2 bridge between Nav2 velocity commands and the Unitree Go2 sport interface.</description>
  <maintainer email="codex@example.com">Codex</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
